2010-06-03  Alvin Delagon  <adelagon@flumotion.com>


	* common/validate-registry.py:
	Remove the check where the plug type name should be the
	same as its class name.

	* flumotion/component/bouncers/base.py:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Fixed the source location of sockets.

2010-06-03  Alvin Delagon <adelagon@flumotion.com>

	patch by: jurbanski

	* flumotion/component/bouncers/combinator.py (added):
	* flumotion/component/bouncers/multibouncerplug.py (added):
	* flumotion/component/bouncers/multibouncerplug.xml (added):
	* flumotion/component/bouncers/multibouncer.py (added):
	* flumotion/component/bouncers/component.xml (added):
	* flumotion/component/bouncers/base.py (added):
	* flumotion/component/bouncers/plug.xml (added):
	* flumotion/component/bouncers/multibouncer.xml (added):
	Added more missing files form multibouncer patch.

2010-06-03  Alvin Delagon  <adelagon@flumotion.com>

	patch by: jurbanski

	* flumotion/component/bouncers/base.xml (added):
	* flumotion/test/test_component_bouncers_bouncer.py (deleted):
	* flumotion/component/bouncers/bouncer.py (deleted):
	* flumotion/component/bouncers/bouncer.xml (deleted):
	* flumotion/component/bouncers/deprecated.xml (deleted):
	* flumotion/component/bouncers/tokentest.py (deleted):
	Added and deleted the files from the multibouncer backport patch.

2010-06-03  Alvin Delagon  <adelagon@flumotion.com>

	patch by: jurbanski

	* flumotion/component/bouncers/algorithms (added):
	* flumotion/component/bouncers/algorithms/tokentest.xml (added):
	* flumotion/component/bouncers/algorithms/base.py (added):
	* flumotion/component/bouncers/algorithms/ipbouncer.xml (added):
	* flumotion/component/bouncers/algorithms/icalbouncer.xml (added):
	* flumotion/component/bouncers/algorithms/__init__.py (added):
	* flumotion/component/bouncers/algorithms/tokentest.py (added):