@@ -1,6 +1,6 @@
 <registry>
   <plugs>
-    <plug socket="flumotion.component.bouncers.algorithms.BouncerAlgorithm"
+    <plug socket="flumotion.component.bouncers.algorithms.base.BouncerAlgorithm"
 	  type="ipbouncer-plug" _description="A bouncer that authenticates
 					      based on remote IP address.">
       <entries>
